--- a/_i18n/en/_posts/2023-12-21-「超智慧對齊」能打造更安全-AI？.md
+++ b/_i18n/en/_posts/2023-12-21-「超智慧對齊」能打造更安全-AI？.md
@@ -9,7 +9,7 @@
     - "Digital Industries"
 ---
 
-Recently, Jensen Huang – co-founder, president and CEO of U.S. multinational tech giant Nvidia Corp., recently said AI will surpass human beings in the next five years. In keeping with this seeming fait accompli, Sam Altman – CEO of OpenAI – said AI development cannot be stopped.
+Recently, Jensen Huang — co-founder, president and CEO of U.S. multinational tech giant Nvidia Corp. — said AI will surpass human beings in the next five years. In keeping with this seeming fait accompli, Sam Altman – CEO of OpenAI – said AI development cannot be stopped.
 
 These fears are shared by Ilya Sutskever — co-founder and chief scientist at OpenAI. But his farsighted [superalignment project](https://openai.com/blog/introducing-superalignment) may offer a viable way of avoiding what can only be seen as a major societal-scale risk.
 
