--- a/_i18n/en/_posts/2023-12-21-「超智慧對齊」能打造更安全-AI？.md
+++ b/_i18n/en/_posts/2023-12-21-「超智慧對齊」能打造更安全-AI？.md
@@ -25,7 +25,7 @@ For example, a judge can hear a complex patent infringement case without being a
 
 Going forward, people can co-create a Constitutional AI document, and  AI models can be aligned to the prescribed norms as The Collective Intelligence Project and Anthropic have ably [demonstrated](https://www.anthropic.com/index/collective-constitutional-ai-aligning-a-language-model-with-public-input). Case in point, a small AI, trained in the United Nations’ Universal Declaration of Human Rights, can then calibrate a larger AI model’s alignment.
 
-As policymakers, our job is to send clear signals to the market through tailored initiatives and state investment. The recently opened AI Evaluation Center is playing its part by issuing a 10-point plan governing AI models. This comprises security, resilience, accuracy, responsibility, privacy, interpretability, fairness, transparency, reliability and security. If a model proves problematic, it will not be banned immediately, but the government cannot encourage its deployment.
+As policymakers, our job is to send clear signals to the market through tailored initiatives and state investment. The recently opened AI Evaluation Center is playing its part by issuing a 10-point plan governing AI models. This comprises safety, resilience, accuracy, accountability, privacy, explainability, fairness, transparency, reliability and security. If a model proves problematic, it will not be banned immediately, but the government cannot encourage its deployment.
 
 When I assisted Apple Inc.’s Siri team from 2010 to 2016, the most important thing at that time was accuracy and harmlessness. As alignment techniques mature, I believe AI systems with frequent hallucinations will come to be avoided by investors.
 
