--- a/_i18n/en/_posts/2024-01-18-AI-調適.md
+++ b/_i18n/en/_posts/2024-01-18-AI-調適.md
@@ -1,33 +1,31 @@
 ---
   layout: "post"
-  title: "AI Adaptation"
-  excerpt: "Are the standards and definitions for assessing harm tied to a small group of people?"
+  title: "AI adaptation"
+  excerpt: "Are the standards and definitions for assessing harms are tied to a small group of people?"
   image: "/assets/imgs/boat-1834397_1280.jpg"
-  author: "唐鳳、江殷年"
+  author: "Audrey Tang, Vanessa Chiang"
   category: "blog"
   tags: 
-    - "民主網絡"
-    - "數位產業"
+    - "Democracy Network"
+    - "Digital Industries"
 ---
 
+When it comes to AI governance, in addition to relevant legislation, what I want to emphasize is the "forward-looking" AI adaptation mechanism. 
 
-When it comes to AI governance, in addition to relevant legislation, what I want to emphasize is the "pre-deployment" AI adjustment mechanism. 
+Why forward-looking?
 
-Why deploy in advance? 
+For example, a few years ago, the Office of Science and Technology Newspaper and I made a video to show the public how easy it is to use cheap cell phones and laptops to deepfake my own image.
 
-For example, a few years ago, the Science and Technology News Office and I made a video, using cheap mobile phones and laptops to deepfake my own images, to tell the public how easy deepfake technology is. 
+In this way, before large-scale damage occurs, we can take a step forward to prevent harm, and at the same time, let the public understand how to mitigate the risks in advance.
 
-In this way, prevention and treatment can be taken early before large-scale damage occurs, and at the same time, the public can understand how to respond to risks in advance. 
+The so-called AI adaptation mechanism has two forward-looking directions: one is to quickly discover new harms through the participation of all people; the other is how to quickly inform practitioners after discovery, and to set a boundary in front of harms to guide practitioners to develop in a safe direction.
 
-The so-called AI adjustment mechanism has two directions for advance deployment: one is to quickly discover new hazards through the participation of all people; the other is how to quickly inform practitioners after discovery, and at the boundary of the hazard Set boundaries beforehand to guide developers to develop in a safe direction. 
+Because AI is a general-purpose technology, it is difficult to assess all possible harms in the laboratory R&D stage, so there should be a systematic way to understand the impact on society when it is actually deployed through at least biannual scrutiny.
 
-Because AI is a general-purpose technology, it is difficult to evaluate all possible hazards during the laboratory research and development stage. Therefore, there should be a systematic approach to understand the impact on society during actual deployment through reviews at least every six months. Influence. 
+But does this mean that the standards and definitions for assessing harms are tied to a small group of people?
 
-But, does this mean that the standards and definitions for assessing harm are tied to a small group of people? 
+Not exactly. We can adopt two approaches. First, we can adopt "voluntary notification", which means that anyone who discovers potential hazards will have a place to raise their hands and discuss with others in a similar situation. Secondly, we can adopt a "random sampling" approach, whereby stratified sampling telephone interviews are conducted after determining the proportion of the population. However, this traditional method of conducting public opinion surveys has its drawbacks. Usually, only multiple-choice questions can be asked, and open-ended questions cannot be asked further.
 
-Not really. We can take two approaches. The first is "voluntary reporting," which means that anyone who sees potential harm has a place where they can raise their hands to speak and discuss it with other people in similar situations. Second, we can use "random sampling" to conduct stratified sampling phone interviews after determining the population proportion. However, this traditional polling method also has its shortcomings. Usually, only multiple-choice questions can be asked, and no further open-ended questions can be asked. 
+To tackle this challenge, we can utilize the "deliberative polling" method, combining deliberative discussions and random sampling, by inviting several hundred or even thousands of statistically representative people across the country to join the video conference in groups, and brainstorm with each other. This will allow for in-depth discussions and allow more people to participate.
 
-In order to respond to this challenge, we can use the "deliberative survey" model, combining deliberative discussions and random sampling, and invite hundreds or even thousands of people from across the country who are statistically representative to join video conferences in groups to brainstorm with each other. . This will allow for in-depth discussions and allow more people to participate. 
-
-I hope that people who have not used AI at all, or have just been affected, will have the opportunity to understand this matter through the deliberation process, and think about it in their own life situations: If friends, family, or even companies start to use advanced generative AI, how will all parties respond? In this way, we can plan ahead and respond to society's needs immediately. 
-
+I hope that people who are not yet using AI, or who have just been affected by it, will have a chance to understand it through the deliberation process, and put it into their own life contexts: if their friends, family, and even their companies start to utilize advanced generative AI, how are they going to adapt? In this way, we will be able to plan ahead and respond to the needs of society immediately.
