--- a/_i18n/en/_posts/2024-02-22-窩心-該翻成焦慮還是貼心.md
+++ b/_i18n/en/_posts/2024-02-22-窩心-該翻成焦慮還是貼心.md
@@ -1,35 +1,34 @@
 ---
   layout: "post"
-  title: "Heartwarming, should it be translated as anxious or considerate?"
-  excerpt: "When applying language models, secondary adjustments and alignment must also be given according to industry communication rules."
+  title: "Should 窩心 be translated as nervous or heartwarming?”
+  excerpt: "When language models are used in a business environment, further fine-tuning and customization is often required according to communication standards."
   image: "/assets/imgs/sew-517026_1280.jpg"
-  author: "唐鳳、陳書榕"
+  author: "Audrey Tang, Michelle Chen"
   category: "blog"
   tags: 
-    - "數位產業"
+    - "Digital Industries"
 ---
 
+How would you translate the sentence "他讓我很窩心"? Using Meta Llama 2's language model to translate it, it will be translated as "He made me feel very nervous". 
 
-How would you translate the sentence "He makes me very happy"? Using Meta Llama 2's language model to translate it, it will be translated as "He made me feel very nervous." 
+"窩心" is used in Taiwan to make people feel warm and touching, while "nervous" has a completely opposite meaning in English. 
 
- "心" is used in Taiwan to make people feel warm and touching, while "nervous" in English means anxiety. , nervous, the two have completely opposite meanings. 
+But with Taiwan's own TAIDE model, it will be accurately translated as "He made me feel very touched.
 
-But if it is my country's TAIDE model, it will be accurately translated as "He made me feel very touched."
+One of the ten topics in the AI Evaluation Center is "Accuracy". If the AI model lacks accuracy, it may cause misunderstandings and even affect work and life. 
 
-One of the ten items in the AI Evaluation Center is "accuracy." If the AI model lacks accuracy, it may cause misunderstandings and even affect work and life. 
+For example, in the medical field, inaccurate translation may lead to misdiagnosis or delayed treatment; in the financial field, it may lead to transaction losses; in the legal field, it may lead to litigation. 
 
-For example, in the medical field, inaccurate translation may lead to misdiagnosis or delayed treatment; in the financial field, it may cause transaction losses; in the legal field, it may lead to litigation disputes. 
+Second, if we do not have a language model that fits the cultural environment, or if a foreign language model does not have accurate evaluation capabilities when it enters our market, it is possible that other countries' language models will use the most accurate evaluation capabilities. Cheap methods will be casually used to deal with the past, enter the market and be used by the public, causing adverse effects. 
 
-Secondly, if we do not have a language model that meets the cultural environment, or a foreign language model does not have accurate evaluation capabilities when it enters our market, then it is possible for other countries’ language models to use the most accurate evaluation capabilities. Cheap methods are used casually to deal with the past, enter the market and be used by the public, causing adverse effects. 
+Finally, who should be the standard for "accuracy"? This is another question that many people ask. The AI Evaluation Center does not make up standard answers, but relies on normative sources, such as authoritative educational institutions like the National Institute of Education, as the basis for accuracy. 
 
-Finally, who should be the standard for "accuracy"? This is also a question many people have. The AI Evaluation Center does not invent standard answers out of thin air, but relies on normative sources, such as authoritative educational institutions such as the National Institute of Education, as the basis for accuracy. 
+Going back to the example at the beginning, in the initial training data of Llama 2, it is obvious that there is a lot of original data that "warmth" means discomfort, which is why it chose to translate it that way. Are you saying that this is wrong? It cannot be said that it is wrong, but it does not meet Taiwan's requirements for accuracy. 
 
-Going back to the example at the beginning, in the initial training data of Llama 2, it is obvious that there are many original data that "warmth" means discomfort, which is why it chose to translate it this way. Do you want to say it is wrong? It cannot be said that it is wrong, but it does not meet Taiwan’s accuracy requirements. 
+That is why it is very important to choose the unit to measure the accuracy against. If we expand it further, the accuracy must also take into account the needs of different businesses. When language models are used in a business environment, further fine-tuning and customization is often required according to communication standards. 
 
-Therefore, it is very important to choose the unit that the accuracy should be benchmarked against. If we extend it further, the accuracy must also consider the needs of various industries. When applying language models, we must also give secondary evaluation according to the communication rules of the industry. Tuning and Alignment. 
+For example, many fields have what we commonly call "jargon" — a customized vocabulary. People in the same business can understand these words at a glance, but people outside the field may not necessarily know them. Another reason is that the same words can have completely different meanings in different industries. 
 
-For example, in all walks of life, there is what we commonly call "jargon", which means "customized" vocabulary within the industry. People in the same industry can understand these words at a glance, but outside the industry People may not necessarily know; it may also be because of other industries, the same words may have completely different meanings. 
+For example, official documents written by law firms and government agencies have very clear jargon, and outsiders may not necessarily understand this specialized vocabulary. At this point, we need to build a dataset within an organization to fine-tune and further adapt the previously trained AI model. 
 
-For example, official documents written by law firms and public departments have very clear jargon usage, and outsiders may not necessarily understand these specialized vocabulary. At this time, we need to construct a data set within the industry to fine-tune the previously trained AI model and further align it. 
-
-When all walks of life can freely fine-tune translation models, text translators will be transformed into the task of final proofreading and model tuning. This may happen within the next two or three years. 
+When all areas of life can freely fine-tune translation models, text translators will be relegated to the task of final proofreading and model tuning — this could happen within the next two to three years.
