--- a/_i18n/en/_posts/2024-02-22-窩心-該翻成焦慮還是貼心.md
+++ b/_i18n/en/_posts/2024-02-22-窩心-該翻成焦慮還是貼心.md
@@ -1,12 +1,12 @@
 ---
-  layout: "post"
-  title: "Should 窩心 be translated as nervous or heartwarming?”
-  excerpt: "When language models are used in a business environment, further fine-tuning and customization is often required according to communication standards."
-  image: "/assets/imgs/sew-517026_1280.jpg"
-  author: "Audrey Tang, Michelle Chen"
-  category: "blog"
-  tags: 
-    - "Digital Industries"
+layout: "post"
+title: "Should 窩心 be translated as nervous or heartwarming?"
+excerpt: "When language models are used in a business environment, further fine-tuning and customization is often required according to communication standards."
+image: "/assets/imgs/sew-517026_1280.jpg"
+author: "Audrey Tang, Michelle Chen"
+category: "blog"
+tags: 
+  - "Digital Industries"
 ---
 
 How would you translate the sentence "他讓我很窩心"? Using Meta Llama 2's language model to translate it, it will be translated as "He made me feel very nervous". 
