--- a/_i18n/en/_posts/2024-03-18-民主峰會-促進尊重人權的創新.md
+++ b/_i18n/en/_posts/2024-03-18-民主峰會-促進尊重人權的創新.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Summit for Democracy: Fostering right-respecting innovations"
 excerpt: "After all, no democracy is an island — not even Taiwan."
-image: /assets/imgs/20240318.jpg
+image: /assets/imgs/h5hkoeil.jpg
 author: Audrey Tang
 category: blog
 tags:
