--- a/_i18n/en/_posts/2024-03-21-以-AI-治-AI.md
+++ b/_i18n/en/_posts/2024-03-21-以-AI-治-AI.md
@@ -1,39 +1,38 @@
 ---
   layout: "post"
-  title: "AI cure AI"
-  excerpt: "Let the \"digital signature\" be as effective as a seal certificate, unique and cannot be counterfeited."
+  title: "AI against AI"
+  excerpt: "Digital signatures, like seal certificates, ensure uniqueness and preventing forgery."
   image: "/assets/imgs/key-hole-1262417_1280.jpg"
-  author: "唐鳳"
+  author: "Audrey Tang, Hsin-Ting Fang"
   category: "blog"
   tags: 
-    - "數位產業"
+    - "Digital Industries"
 ---
 
+In the past, single-page scam e-commerce websites proliferated, yet in 2022, fewer than 3,000 such sites were taken down. Following the establishment of the Ministry of Digital Affairs, the number of such sites blocked in 2023 surged to over 30,000, averaging nearly 100 daily.
 
-In the past, one-page fraudulent e-commerce websites were popular, but the number of this type of websites removed from the shelves in 2022 was less than 3,000. After the establishment of the Digital Development Department, through technical obstacles, the number of items removed from the shelves increased to more than 30,000 in 2023, which is equivalent to nearly 100 items per day. 
+Traditionally, organized fraudsters utilized live calls for one-on-one scams, potentially requiring training to mimic celebrities. However, the maturation of AI technology has significantly "empowered" fraudulent activities.
 
-In the past, fraud groups used real people to make phone calls, which could only be done one-on-one. If they wanted to impersonate celebrities, they might need to be trained to imitate them first. But as AI technology becomes more mature, fraud is also "empowered". 
+With the advent of deepfake technology two years ago, I proactively sought to inoculate the public by commissioning a deepfake video of myself, utilizing an actor. Due to our facial similarities, without explicit clarification, viewers might simply presume Audrey Tang had altered her appearance, oblivious to the impersonation.
 
-Two years ago, deepfake technology emerged. In order to help everyone get vaccinated, I invited actors to deepfake myself and made a video. Because the facial features are similar, if no other explanation is given, the audience will only think that Tang Feng's appearance has changed, and will not know that it is actually another person. 
+This video's creation demanded neither sophisticated equipment nor exorbitant costs, employing readily accessible technology. A laptop and twelve hours suffice for completion, hardly constituting a major undertaking.
 
-The production of this film does not require advanced equipment or high costs. It uses publicly available technologies and can be completed with a laptop in twelve hours. It is not a big project. 
+Organized fraudsters have now embraced AI for communications on messaging platforms, employing text, voice, and even video calls, crafting illusions of celebrity interactions to deceive individuals.
 
-Nowadays, fraud groups have used AI to communicate with people on communication software. In addition to using text, there are also sounds, and even videos, giving people the illusion of talking to celebrities, and then they are deceived. 
+Given AI's capacity to simultaneously converse with thousands, the scale of deception and resulting harm is considerable.
 
-Because AI can chat with tens of thousands of people at the same time, many people can be deceived at once, causing serious harm. 
+The Ministry of Digital Affairs has adopted an "AI against AI" strategy, developing tools such as "Fraud Pattern Analysis" and "Anti-Fraud Radar". These innovations daily identify thousands of dubious ads and e-commerce listings, facilitating their review and preemptive removal by major platforms.
 
-The Digital Department "uses AI to make AI" and has developed technologies such as "fraud pattern analysis" and "anti-fraud radar". It scans out thousands of suspicious advertisements and e-commerce products every day on average and provides them to large platforms for review. Follow up and handle it, and prevent e-commerce stores from taking it down. 
+Additionally, last year's amendments to the Securities Investment Trust and Consulting Act introduced joint and several liabilities for platforms. Should victims attribute their deception to platform-hosted ads, which, despite reports, weren't withdrawn within 24 hours, platforms must assume financial liability for the fraud.
 
-The Legislative Yuan also passed an amendment to the Securities Investment Trust and Consultancy Act last year, making the platform jointly and severally liable: when a victim testifies that he was deceived because he saw an advertisement on the platform, and the advertisement was reported When notified but not removed within 24 hours, the platform will be liable for joint and several damages no matter how much the victim was deceived. 
+In our continuous struggle against organized fraud, a balance of offense and defense is essential. As audio-visual synthesis technology becomes more sophisticated and misleading, we need more unfalsifiable measures to escalate the challenge of posting scam ads.
 
-For us, the fraud syndicate is a balance between attack and defense. As audio and video synthesis technology advances rapidly and becomes more and more deceptive, we have to use things that are more difficult to fake to make it more difficult for fraudulent advertisements to be put on the shelves. 
+"Authenticity" stands as the paramount fraud deterrent. What better represents an individual's identity than a hard-to-fake "digital signature"?
 
-The best way to prevent fraud is to be "authentic". What represents a person’s true identity? Our solution is a "digital signature" that is difficult to forge. 
+Although citizen digital certificates, corporate certificates, and organizational certificates have been utilized for years in Taiwan, prior amendments did not presume the same legal authority as signing on paper personally. The recent amendment to the Electronic Signature Act equates digital signatures with seal certificates, ensuring uniqueness and preventing forgery.
 
-Natural person certificates, industrial and commercial certificates, organization and group certificates, although these certificates have been used in China for many years, before the amendment of the law, they were not presumed to be personally signed by the person. The purpose of this revision of the "Electronic Signature Law" is to make the "digital signature" as effective as a seal certificate, unique and unable to be counterfeited. 
+Looking ahead, investment ads on major platforms must authenticate personal involvement or genuine celebrity endorsement via digital signatures.
 
-In the future, if you want to put investment advertisements on large platforms, you must use a digital signature to prove that you are the person or that a celebrity has authorized it before you can advertise in his name. 
+Should ads be flagged as suspicious and withdrawn, reposting under a new name won't viable for fraudsters, as perpetual name changes at registration offices are impractical.
 
-When an advertisement is reported as suspicious and withdrawn, the person concerned must use a new name if he wants to put it on the shelves again, but the fraudster cannot always go to the household registration office to change his name. 
-
-Entering the AI era, seeing is no longer enough. The defender must also take the initiative in order to fight AI with AI. 
+As we venture into the AI era, seeing can no longer be equated with believing. It's imperative for defenders to proactively engage, leveraging AI against AI.
