--- a/_i18n/zh-TW/_posts/2024-03-21-以-AI-治-AI.md
+++ b/_i18n/zh-TW/_posts/2024-03-21-以-AI-治-AI.md
@@ -3,7 +3,7 @@ layout: post
 title: "以 AI 治 AI"
 excerpt: "讓「數位簽章」效力等同印鑑證明，獨一無二、不能被仿冒。"
 image: /assets/imgs/key-hole-1262417_1280.jpg
-author: 唐鳳
+author: "唐鳳、方歆婷"
 category: blog
 tags:
   - 數位產業
