--- a/_i18n/zh-TW/_posts/2024-05-16-從派車單看新科技如何接地氣.md
+++ b/_i18n/zh-TW/_posts/2024-05-16-從派車單看新科技如何接地氣.md
@@ -2,7 +2,7 @@
 layout: post
 title: "從派車單看新科技如何接地氣"
 excerpt: "「my moda」是數位部的一套內部民主系統，近六百位同仁都能提出創新提案。"
-image: /assets/imgs/blank-2970215_1280.jpg"
+image: "/assets/imgs/mymoda.jpg"
 author: "唐鳳、方歆婷"
 category: blog
 tags:
