--- a/_i18n/en/_posts/2024-05-16-從派車單看新科技如何接地氣.md
+++ b/_i18n/en/_posts/2024-05-16-從派車單看新科技如何接地氣.md
@@ -1,39 +1,34 @@
 ---
   layout: "post"
   title: "See how new technology can be grounded from the perspective of dispatch orders"
-  excerpt: "\"my moda\" is an internal democratic system in the digital department, where nearly 600 colleagues can put forward innovative proposals."
-  image: "/assets/imgs/blank-2970215_1280.jpg\""
-  author: "唐鳳、方歆婷"
+  excerpt: "The Ministry of Digital Affairs utilizes an internal democratic system called \"my moda.\" Nearly six hundred colleagues can propose innovative solutions or address current policy challenges through this platform."
+  image: "/assets/imgs/mymoda.jpg"
+  author: "Audrey Tang, Hsin-Ting Fang"
   category: "blog"
   tags: 
-    - "數位策略"
+    - "Digital Strategy"
 ---
 
 
-The vehicle dispatch form is a document that needs to be filled in when using an official vehicle. On a small document, there are dozens of fields, from the name of the applicant, the purpose of dispatching the car, to the driving time, mileage, fuel volume, etc. filled in by the driver. Finally, it is handed over to the management unit and needs to be logged in again. Enter the system for future search. 
+The Dispatch Form is a document required when using government vehicles. Despite its small size, it contains numerous fields, from the applicant's name and purpose of use to the driver’s entries of travel time, mileage, fuel consumption, and more—amounting to dozens of details. Once completed, the form is submitted to the management unit and entered into the system for future reference.
 
-After digitization, this administrative process has been moved to online processing, which can save the time of manual registration, but it is very troublesome for drivers who are not used to inputting on mobile phones. 
+With digitalization, this administrative process moved online, saving time from manual data entry. However, this shift poses a challenge for drivers not accustomed to mobile input.
 
-This is the most common problem in the transition from paper to digital: one party's problem is solved, but the burden is placed on the other party, but both parties have a say. What should we do at this time? 
+This transition from paper to digital often presents a common issue: solving a problem for one group while creating a burden for another. When both sides have a voice, how should this be managed?
 
-The chief wants to understand the experience of the front line. In the past, he often used focus interviews, or employees posted their opinions to the minister's mailbox. However, even if they took the time to read them one by one, it was often difficult to find a solution that satisfied both parties. 
+Department heads typically gather frontline experiences through focus interviews or an employee suggestion box. Despite the effort of reviewing each response, finding a solution that satisfies both parties is challenging.
 
-Then let’s hear what everyone has to say! 
+Let's hear what everyone has to say!
 
- "my moda" is an internal democratic system of the Digital Department. Nearly 600 colleagues can put forward innovative proposals or provide specific and effective solutions to the problems faced by current governance. On the discussion platform, if 30 likes are received within ten working days, the proposal will be handed over to the relevant unit to study the feasibility, and the content of the proposal will be strengthened before being voted on by colleagues. 
+The Ministry of Digital Affairs utilizes an internal democratic system called "my moda." Nearly six hundred colleagues can propose innovative solutions or address current policy challenges through this platform. If a proposal receives thirty likes within ten working days on the discussion platform, it is forwarded to the relevant unit for feasibility studies. After refining the proposal, it is presented to all colleagues for a vote.
 
-After five working days of voting, if the proposal is approved by 100 votes, the proposal will be broadcast live every month by the minister to further discuss and explain the processing situation with everyone. Participants can anonymously ask questions online. Proposals will be adopted only after consensus is obtained. 
+If the proposal garners one hundred votes within five working days, it will be discussed further during the monthly ministerial livestream. Participants can ask questions anonymously online. Only after gaining consensus is the proposal adopted.
 
-When we are doing digital transformation, what we worry about most is that we don’t know what the actual needs are. We just go from top to bottom without solving the problem, but create new problems. 
+During digital transformation, our biggest concern is not understanding the actual needs, and a top-down approach often fails to solve problems, creating new ones instead. However, if we know that more than one-sixth of our colleagues share a common need, we can address the majority’s issues more effectively.
+Returning to the dispatch form example, users commonly seek convenience, though their solutions differ. On the discussion platform and in livestreams, everyone can voice their opinions, evaluating new foundations to balance diverse interests.
 
-However, if we can know in advance that more than one-sixth of our colleagues have certain common needs, we can directly prescribe the right medicine to solve the problems of most people first. 
+The final decision was to implement OCR (Optical Character Recognition) technology, allowing drivers to continue handwriting. For drivers, writing a few words is faster than photographing the odometer and uploading the numbers. The subsequent processing is fully digitized, utilizing generative AI to automatically extract fields from the handwritten forms, eliminating the need for manual entry.
 
-Going back to the example of dispatching a car, the common wish of the demanders is to save effort, but the solutions are different. Everyone can put forward opinions on the discussion platform and live broadcast to see what new foundations should be adopted in order to take into account the interests of multiple parties. 
+By digitizing these dispatch forms, statistical analysis can generate more innovative proposals. For example, if the most frequent reason for dispatch is to deliver confidential documents, we can further explore end-to-end encryption and fully implement online signing to save more time.
 
-The final decision on the case was to introduce OCR (computer text recognition) technology so that drivers can still choose to write by hand, because instead of uploading numbers on the mileage dashboard, it is fastest for drivers to write a few words. 
-
-However, the subsequent processing procedures are fully digitized and rely on generative AI to automatically capture the fields on the paper, so there is no need to hire a special person to type. 
-
-After digitizing these dispatch orders, more innovative proposals can be formed through statistics and analysis. For example, looking at the reasons for dispatching cars, the most frequent one is to send confidential documents. Let’s think about it further: How can confidential documents be encrypted end-to-end and fully introduced online for sign-off, so as to save more time? 
-
-Through the internal democratic mechanism, the integration between users and new technologies has gradually become smoother, giving the most basic dispatch order a new value. 
+Through our internal democratic mechanism, the integration between users and new technology smoothens, even giving basic dispatch forms new value.
